tests/ui/parser/keyword-override.rs
fn main() {
    let override = (); //~ ERROR expected identifier, found reserved keyword `override`
}
